force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/Dynamic_Plan_Parent_Obj_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This contains configuration for parent object on which plan wizard will be launching.</description>
    <label>Dynamic Plan Parent Obj Configuration</label>
    <pluralLabel>Dynamic Plan Parent Obj Configurations</pluralLabel>
</CustomObject>