force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Child_Filter_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Filter_Field_API_Name__c</fullName>
    <description>This is child object field API name which contains parent object Id (relationship field).</description>
    <label>Child Filter Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>