force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Child_Obj_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Obj_API_Name__c</fullName>
    <description>This is child obj API name data of  which needs to be displayed on UI. If Junction object exist then case is different we will display child&apos;s parent object data.</description>
    <label>Child Obj API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>