force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Child_s_parent_Filter_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_s_parent_Filter_Field_API_Name__c</fullName>
    <description>This is child&apos;s parent object API name i.e, second parent object API name of the junction object.</description>
    <label>Child&apos;s parent Filter Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>