force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Child_s_Parent_Obj_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Parent_Obj_API_Name__c</fullName>
    <description>This is Junction object&apos;s field API name which contains Id of it&apos;s second parent which is gonna get considered for UI(
relationship filed).</description>
    <label>Child&apos;s Parent Obj API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>