force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Filter_Filed_Name_Plan_Obj__c.field-meta.xml
<CustomField>
    <fullName>Filter_Filed_Name_Plan_Obj__c</fullName>
    <description>this is field name in plan obj which is lookup of parent obj</description>
    <label>Filter Filed Name Plan Obj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>