force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Goal_s_Filter_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Goal_s_Filter_Field_API_Name__c</fullName>
    <description>This is goal&apos;s field API name which contains value of the child obj which got considered for UI data display (relationship field).</description>
    <label>Goal&apos;s Filter Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>