force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Is_Junction_Exist__c.field-meta.xml
<CustomField>
    <fullName>Is_Junction_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox tells if junction object exist or not. If exist then we will consider values of  &apos;Child&apos;s parent Filter Field API Name&apos;,  &apos;Child&apos;s Parent Obj API Name&apos; fields to display fetched data on UI.</description>
    <label>Is Junction Exist</label>
    <type>Checkbox</type>
</CustomField>