force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Obj_fields_for_wrapper_fields__c.field-meta.xml
<CustomField>
    <fullName>Obj_fields_for_wrapper_fields__c</fullName>
    <description>These are fields which will be mapped with the code wrapper field. &apos;,&apos; comma separated values</description>
    <label>Obj fields for wrapper fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>