force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Object_Fields_To_Display_List__c.field-meta.xml
<CustomField>
    <fullName>Object_Fields_To_Display_List__c</fullName>
    <description>Field API names comma separated which needs to be displayed on the UI. &apos;-&apos; seperated values.</description>
    <label>Object Fields To Display List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>