force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Parent_Obj_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Obj_API_Name__c</fullName>
    <description>This is the parent object API name from where plan wizard is launched</description>
    <label>Parent Obj API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>