force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/fields/Wrapper_Field_List__c.field-meta.xml
<CustomField>
    <fullName>Wrapper_Field_List__c</fullName>
    <description>List of wrapper field which will store value of the &apos;obj fields for wrapper fields&apos; in the same order. &apos;,&apos; comma separated values</description>
    <label>Wrapper Field List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>