force-app/main/default/objects/Dynamic_Plan_Parent_Obj_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Junction_Exist__c</columns>
    <columns>Parent_Obj_API_Name__c</columns>
    <columns>Child_s_Parent_Obj_API_Name__c</columns>
    <columns>Child_Obj_API_Name__c</columns>
    <columns>Filter_Filed_Name_Plan_Obj__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>